# Sciforge

./: .gitignore  Cargo.toml  ChangeLog.md  ComingSoon.md  Contributing.md  README.md
crates/aeronaval/: Cargo.toml
crates/aeronaval/src/: lib.rs
crates/aeronaval/src/air/: mod.rs
crates/aeronaval/src/air/drones/: mod.rs
crates/aeronaval/src/air/planes/: mod.rs
crates/aeronaval/src/space/: mod.rs
crates/aeronaval/src/space/launchers/: mod.rs
crates/aeronaval/src/space/probes/: mod.rs
crates/aeronaval/src/water/: mod.rs
crates/aeronaval/src/water/boats/: mod.rs
crates/aeronaval/src/water/gliders/: mod.rs
crates/automotive/: Cargo.toml
crates/automotive/src/: lib.rs
crates/automotive/src/cars/: mod.rs
crates/automotive/src/cars/blocs/: mod.rs
crates/automotive/src/cars/sedan/: mod.rs
crates/benchmark/: Cargo.toml
crates/benchmark/src/: lib.rs
crates/benchmark/src/decode/: compact.rs  full.rs  mod.rs
crates/benchmark/src/encode/: header.rs  mod.rs  payload.rs
crates/benchmark/src/engine/: bench.rs  constants.rs  error.rs  metrics.rs  mod.rs
crates/benchmark/src/export/: bmk.rs  csv.rs  json.rs  md.rs  toml.rs  yaml.rs
crates/benchmark/src/export/html/: charts.rs  layout.rs
crates/benchmark/src/report/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs  toml.rs  yaml.rs
crates/benchmark/src/simulation/: config.rs  mod.rs  state.rs  traits.rs
crates/components/: Cargo.toml
crates/components/src/: lib.rs
crates/components/src/body/: mod.rs
crates/components/src/body/aerodynamics/: diffuser.rs  mod.rs  splitter.rs  spoiler.rs  wing.rs
crates/components/src/body/glazing/: mod.rs  rear_window.rs  side_window.rs  windshield.rs
crates/components/src/body/panels/: door.rs  fender.rs  hood.rs  mod.rs  roof.rs  trunk.rs
crates/components/src/brakes/: mod.rs
crates/components/src/brakes/disc/: caliper.rs  mod.rs  pad.rs  rotor.rs
crates/components/src/brakes/drum_brake/: drum.rs  mod.rs  shoe.rs
crates/components/src/brakes/systems/: abs.rs  bias.rs  ebd.rs  mod.rs
crates/components/src/cooling/: intercooler.rs  mod.rs  oil_cooler.rs  radiator.rs
crates/components/src/drivetrain/: bottom_bracket.rs  cassette.rs  chain.rs  crankset.rs  derailleur.rs  mod.rs  pedal.rs
crates/components/src/electrical/: alternator.rs  battery.rs  ecu.rs  fuse_box.rs  mod.rs  starter.rs
crates/components/src/exhaust/: catalyst.rs  dpf.rs  mod.rs  muffler.rs
crates/components/src/frames/: mod.rs
crates/components/src/frames/chassis/: backbone.rs  ladder.rs  mod.rs  spaceframe.rs
crates/components/src/frames/monocoque/: mod.rs  stressed_skin.rs  unibody.rs
crates/components/src/frames/motorcycle/: cradle.rs  mod.rs  perimeter.rs  trellis.rs
crates/components/src/fuel/: mod.rs  pump.rs  tank.rs
crates/components/src/hvac/: compressor.rs  heater.rs  mod.rs  ventilation.rs
crates/components/src/lights/: mod.rs
crates/components/src/lights/indoor/: ambient.rs  dome.rs  instrument.rs  mod.rs
crates/components/src/lights/outdoor/: daytime_running.rs  fog_light.rs  headlight.rs  indicator.rs  mod.rs  taillight.rs
crates/components/src/powertrain/: mod.rs
crates/components/src/powertrain/engines/: mod.rs
crates/components/src/powertrain/powerpacks/: bev.rs  driveline.rs  erev.rs  fcev.rs  hev.rs  ice.rs  mhev.rs  mod.rs  phev.rs  series_parallel.rs
crates/components/src/powertrain/propulsion/: mod.rs  propeller.rs  (+2 more)
crates/components/src/safety/: airbag.rs  crumple_zone.rs  mod.rs  seatbelt.rs
crates/components/src/seats/: bench.rs  comfort.rs  mod.rs  sport.rs
crates/components/src/sounds/: acoustics.rs  mod.rs  runtime.rs
crates/components/src/steering/: column.rs  mod.rs  rack.rs  wheel.rs
crates/components/src/suspensions/: mod.rs
crates/components/src/towing/: ball_hitch.rs  fifth_wheel.rs  mod.rs  pintle.rs
crates/components/src/wheels/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/acoustics/: absorption.rs  doppler.rs  mod.rs  propagation.rs  resonance.rs
crates/core/src/dynamics/: mod.rs
crates/core/src/electronics/: components.rs  devices.rs  dielectric.rs  gas.rs  liquid.rs  magnetic.rs  material.rs  mod.rs  semiconductor.rs  superconductor.rs  thermal.rs  thermoelectric.rs
crates/core/src/lubrications/: ehl.rs  hydrodynamic.rs  interface.rs  mod.rs  properties.rs
crates/core/src/mechanics/: mod.rs
crates/core/src/moleculars/: mod.rs
crates/core/src/optics/: absorption.rs  birefringence.rs  dispersion.rs  electro_optic.rs  fiber.rs  gas.rs  interfaces.rs  laser.rs  lenses.rs  liquid.rs  material.rs  mod.rs  polarization.rs  thermo_optic.rs  transmission.rs
crates/core/src/quantum/: atom.rs  entanglement.rs  gates.rs  mod.rs  oscillator.rs  qubit.rs  spin.rs  tunneling.rs  well.rs
crates/hub/: Cargo.toml
crates/hub/src/: lib.rs  prelude.rs
crates/hub/src/domain/: mod.rs
crates/hub/src/engine/: campaign.rs  mod.rs
crates/hub/src/tools/: arena.rs  benchmark.rs  config.rs  deterministic.rs  metrics.rs  profiler.rs  utils.rs  validation.rs  visualization.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/astronomy/: celestial.rs  galactic.rs  impacts.rs  mod.rs  orbits.rs  rotation.rs
crates/lib/src/chemistry/: mod.rs
crates/lib/src/constants/: mod.rs
crates/lib/src/geology/: erosion.rs  geomorphology.rs  hydrology.rs  mantle.rs  mod.rs  tectonics.rs  volcanism.rs
crates/lib/src/maths/: mod.rs
crates/lib/src/meteorology/: atmosphere.rs  clouds.rs  dynamics.rs  ocean.rs  precipitation.rs  radiation.rs  winds.rs
crates/lib/src/physics/: mod.rs
crates/parser/: Cargo.toml
crates/parser/src/csv/: lexer.rs  parser.rs
crates/parser/src/json/: error.rs  mod.rs  number.rs  parser.rs  string.rs  value.rs
crates/parser/src/markdown/: inline.rs  lexer.rs  mod.rs  parser.rs
crates/parser/src/toml/: error.rs  value.rs
crates/parser/src/yaml/: error.rs  lexer.rs  mod.rs  parser.rs  scalar.rs  value.rs  writer.rs
crates/rail/: Cargo.toml
crates/rail/src/: lib.rs
crates/server/backend/: Cargo.toml  README.md  arborescence.md
(+11460 files in other folders)
