[package]
name = "sciforge-components"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vehicle component definitions: body, powertrain, brakes, suspension, sounds, etc."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sciforge-hub.workspace = true
sciforge-core.workspace = true
