[package]
name = "sciforge-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scientific computing library — mathematics, physics, chemistry, biology, astronomy, geology, meteorology."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["full"]
full = ["astronomy", "biology", "chemistry", "geology", "maths", "meteorology", "physics"]

astronomy = []
biology = []
chemistry = []
geology = []
maths = []
meteorology = []
physics = ["maths"]

[dependencies]
