[package]
name = "sciforge-rail"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rail vehicles: passenger, freight, urban transit, intercity, special."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sciforge-hub.workspace = true
sciforge-core.workspace = true
