[workspace]
members = [
    "crates/core-domain",
    "crates/game-protocol",
    "crates/link-protocol",
    "crates/server-control",
    "services/api-gateway",
    "services/identity",
    "services/link-service",
    "services/lobby",
    "services/realtime-gateway",
    "services/server-manager",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
