[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
core-domain = { path = "../../crates/core-domain" }
link-protocol = { path = "../../crates/link-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
server-control = { path = "../../crates/server-control" }
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
