[package]
name = "lobby"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
core-domain = { path = "../../crates/core-domain" }
reqwest.workspace = true
tracing-subscriber.workspace = true
server-control = { path = "../../crates/server-control" }
tokio.workspace = true
uuid.workspace = true
