[package]
name = "realtime-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
core-domain = { path = "../../crates/core-domain" }
futures-util = "0.3"
game-protocol = { path = "../../crates/game-protocol" }
redis.workspace = true
reqwest.workspace = true
server-control = { path = "../../crates/server-control" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
